@@ -1,3 +1,2 @@
 --enable-native-access=javafx.graphics
---sun-misc-unsafe-memory-access=allow
 
